...
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 августа 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MG7-iP-jLC" userLabel="Date">
                                                    <rect key="frame" x="24.000000000000007" y="1039.3333333333333" width="101.66666666666669" height="15.666666666666742"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" name="YPWhite"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wZ8-ul-FQk" userLabel="LikeButton">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="sTu-In-ahB"/>
                                                        <constraint firstAttribute="width" constant="44" id="zZP-6C-IYx"/>
                                                    </constraints>
...
                            <constraint firstAttribute="bottom" secondItem="lFT-5e-BOs" secondAttribute="bottom" id="Hhk-by-SnU"/>
                            <constraint firstAttribute="trailing" secondItem="lFT-5e-BOs" secondAttribute="trailing" id="mqq-fD-YQ7"/>
                            <constraint firstItem="lFT-5e-BOs" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="q53-xN-n6L"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="" image="tab_editorial_active" id="Sbk-mW-J54"/>
                    <navigationItem key="navigationItem" customizationIdentifier="BackButton" id="3ap-se-Djs"/>
                    <connections>
                        <outlet property="tableView" destination="lFT-5e-BOs" id="Kv2-lu-bBT"/>
                        <segue destination="fCI-hq-HUv" kind="presentation" identifier="ShowSingleImage" id="4j7-EA-f7n"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
...
