...
        authButton.backgroundColor = .ypWhite
        authButton.translatesAutoresizingMaskIntoConstraints = false
        authButton.setTitle("Войти", for: .normal)
        authButton.setTitleColor(.ypBlack, for: .normal)
        authButton.titleLabel?.font = UIFont.systemFont(ofSize: 17, weight: .bold)
        view.addSubview(authButton)
        authButton.accessibilityIdentifier = "Authenticate" 
        
        authButton.addTarget(self, action: #selector(authButtonTapped), for: .touchUpInside)
        
        NSLayoutConstraint.activate([
            authButton.leadingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.leadingAnchor, constant: 16),
            authButton.trailingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.trailingAnchor, constant: -16),
...
